--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   web:
     build: .
-    command: go run main.go -port=80    
+    command: npm start
     ports:
-     - 80:80
+     - 8080:8080
     volumes:
-     - ./src:/app/src
+     - ./app:/usr/src/app
